--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counterContainer{
+  width:30%;
+  margin-left:35%;
+  margin-top:20vh; 
+  background-color: bisque;
+  border:1px dashed rgb(10, 10, 10);
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.counterValue{
+  text-align: center;
+  font-size: 80px;
+  line-height: 70px;
+  border-radius: 10px;
+  border: 2px solid black;
+  background-color:rgb(253, 156, 217) ;
+  padding: 4vw;
+  margin: 10px;
+}
+.counterButton{
+  font-size:25px;
+  border-radius: 5px;
+  background-color: rgb(89, 188, 250);
+  font-family: 'Courier New', Courier, monospace;
+  display: block;
+  margin: 10px;
+} 
+.counterResetButton{
+  font-size:23px;
+  border-radius: 8px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 2px 10px 2px 10px;
+  background-color: rgb(37, 37, 37);
+  font-family: 'Courier New', Courier, monospace;
+  display: block;
+  margin: 10px;
 }
